# motion_monitor

./: .gitignore  Dockerfile  Makefile  README.md
algo/: algo.h
client/: CMakeLists.txt
client/demo/capture/: main.cpp
client/demo/capture_audio/: main.cpp
client/demo/gui/: main.cpp
client/demo/minimal/: main.cpp
client/include/: motion_monitor.h
client/src/: connection.cpp
components/client/demo/capture/: main.cpp
components/client/demo/capture_audio/: main.cpp
components/client/demo/minimal/: main.cpp
components/client/include/sentinel/: client.h
components/client/src/: connection.cpp
components/dashboard/: camera_widget.cpp  camera_widget.h  chart_widget.cpp  config.cpp  config.h  dashboard.cpp  dashboard.h  fetch_request.h  fetch_request_emscripten.cpp  fetch_request_fs.cpp  main.cpp  microphone_widget.cpp  telemetry_stream.h
components/proto/: CMakeLists.txt
components/proto/include/sentinel/: proto.h
components/server/: CMakeLists.txt  default_config.yaml  main.cpp
components/server/src/: clock.h  config.cpp  config.h  detector.cpp  http_server.h  image.cpp  image.h  microphone_pipeline.cpp  microphone_pipeline.h  pipeline.h  pipeline_base.cpp  pipeline_base.h  pipeline_runner.h  uv.h  video_device.cpp  video_device.h  video_frame_filter.cpp  video_frame_filter.h  video_pipeline.cpp  video_pipeline.h  video_storage.cpp  video_storage.h
components/server/tests/: test_pipeline_runner.cpp
dashboard/: CMakeLists.txt  camera_widget.cpp  chart_widget.cpp  chart_widget.h  config.cpp  config.h  dashboard.cpp  index.html.in  main.cpp  microphone_widget.h  stop_watch.h  telemetry_stream_emscripten.cpp  telemetry_stream_fake.cpp  widget.h
detector/train/: Makefile  __main__.py  autoencoder.py
label/: CMakeLists.txt  main.cpp
proto/: CMakeLists.txt
proto/docs/: README.md
proto/include/: motion_monitor_proto.h
proto/include/sentinel/: proto.h
proto/src/: queue.cpp  read.cpp  writer.cpp
scripts/: build.sh
server/: CMakeLists.txt  default_config.yaml  main.cpp
server/src/: camera_pipeline.cpp  camera_pipeline.h  clock.h  config.cpp  config.h  detector.h  exposure.cpp  exposure.h  fake_video_device.cpp  http_server.cpp  http_server.h  image.cpp  image.h  microphone_device.cpp  microphone_device.h  microphone_pipeline.cpp  motion_filter.cpp  motion_filter.h  pipeline.h  pipeline_runner.cpp  pipeline_runner.h  server.cpp  server.h  telemetry_observer.h  video_device.cpp  video_device.h  video_pipeline.cpp  video_storage.cpp  video_storage.h
server/tests/: CMakeLists.txt  test_config_validation.cpp  test_pipeline_runner.cpp
